fix(button): fixed loading button form variant alignment

--- a/src/less/button/button.less
+++ b/src/less/button/button.less
@@ -154,6 +154,11 @@ button.btn .progress-spinner {
     width: 24px;
 }
 
+button.btn--form .progress-spinner {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 button.btn--primary.btn--destructive .progress-spinner {
     --color-spinner-icon-background: #ec7089;
     --color-spinner-icon-foreground: var(--color-foreground-on-accent);
